[tool.poetry]
name = "poc streamlit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.1"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
streamlit = "^1.44.1"
ipykernel = "^6.29.5"
folium = "^0.19.5"
streamlit-folium = "^0.24.0"


[[tool.poetry.source]]
name = "wb_pypi"
url = "https://pypi.wbad.witteveenbos.com/simple/"
default = false
secondary = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
